parent account, edit profile

--- a/proj18/templates/edit_p.html
+++ b/proj18/templates/edit_p.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Edit Profile</title>
 </head>
 <body>
-$END$
+<form method="post" action = "/edit_parent">
+    <label>First Name:</label>
+    <input id="fname_p" name="fname_p" type="text"/>
+    <label>Last Name:</label>
+    <input id="lname_p" name="lname_p" type="text"/>
+    <label>Birthdate:</label>
+    <input id="bday_p" name="bday_p" type="date"/>
+    <label>Address:</label>
+    <input id="add_p" name="add_p" type="text"/>
+    <input type="submit"/>
+</form>
+
 </body>
 </html>
