--- a/proj18/templates/p_prof.html
+++ b/proj18/templates/p_prof.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-
+<button class="" type="submit" onclick="window.location.href='/edit_parent'" >Edit</button>
 </body>
 </html>
