--- a/proj18/templates/mode.html
+++ b/proj18/templates/mode.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-
+<script src="app.js"></script>
 <style class="cp-pen-styles">body, html {
   height: 100%;
 }
@@ -57,7 +57,8 @@ body {
 }
 </style></head><body>
 <div class="group">
-  <input type = "image" src="../images/parent.jpg">
+    <div style="background-image:url('parent.jpg')" onclick="p_prof();"></div>
+
 </div>
 
 <div class="group">
