view data from db, parent acct

--- a/proj18/templates/mode.html
+++ b/proj18/templates/mode.html
@@ -57,7 +57,7 @@ body {
 }
 </style></head><body>
 <div class="group">
-    <div style="background-image:url('parent.jpg')" onclick="p_prof();"></div>
+    <div style="background-image:url('parent.jpg')" onclick="window.location.href='/parent'"></div>
 
 </div>
 
