--- a/proj18/templates/edit_p.html
+++ b/proj18/templates/edit_p.html
@@ -5,7 +5,7 @@
     <title>Edit Profile</title>
 </head>
 <body>
-<form method="post" action = "/edit_parent">
+<form method="post" action = '/edit_parent'>
     <label>First Name:</label>
     <input id="fname_p" name="fname_p" type="text"/>
     <label>Last Name:</label>
@@ -14,7 +14,7 @@
     <input id="bday_p" name="bday_p" type="date"/>
     <label>Address:</label>
     <input id="add_p" name="add_p" type="text"/>
-    <input type="submit"/>
+    <input type="submit" onclick="window.location.href='/parent'"/>
 </form>
 
 </body>
