--- a/proj18/templates/mode.html
+++ b/proj18/templates/mode.html
@@ -6,7 +6,6 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<script src="app.js"></script>
 <style class="cp-pen-styles">body, html {
   height: 100%;
 }
@@ -55,15 +54,14 @@ body {
 {
   height: 50%;
 }
-</style></head><body>
+</style><body>
 <div class="group">
-    <div style="background-image:url('parent.jpg')" onclick="window.location.href='/parent'"></div>
+    <div style="background-image:url('images/parent.jpg')" onclick="window.location.href='/parent'"></div>
 
 </div>
 
 <div class="group">
-  <div style="background-image:url(http://i.pravatar.cc/300?2)"></div>
-  <div style="background-image:url(http://i.pravatar.cc/300?3)"></div>
+    <div style="background-image:url('images/parent.jpg')" onclick="window.location.href='/child'"></div>
 </div>
 
     <!--<div class="group">-->
