--- a/proj18/templates/p_prof.html
+++ b/proj18/templates/p_prof.html
@@ -1,17 +1,95 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Parent's Profile</title>
-</head>
-<body>
-<form method="get" action = "/edit_parent">
-{% for parent in myParent %}
-    <table>Name: {{ parent.fname_p}} {{ parent.lname_p}}</table>
-    <table>Birthdate: {{ parent.bday_p}}</table>
-    <table>E-mail: {{ parent.add_p}}</table>
-{% endfor %}
-<button class="" type="submit" onclick="window.location.href='/edit_parent'" >Edit</button>
-</form>
-</body>
-</html>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+    <!--<meta charset="UTF-8">-->
+    <!--<title>Parent's Profile</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<form method="get" action = "/edit_parent">-->
+<!--{% for parent in myParent %}-->
+    <!--<table>Name: {{ parent.fname_p}} {{ parent.lname_p}}</table>-->
+    <!--<table>Birthdate: {{ parent.bday_p}}</table>-->
+    <!--<table>E-mail: {{ parent.add_p}}</table>-->
+<!--{% endfor %}-->
+<!--<button class="" type="submit" onclick="window.location.href='/edit_parent'" >Edit</button>-->
+<!--</form>-->
+<!--</body>-->
+<!--</html>-->
+<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js">
+<link href="https://code.jquery.com/jquery-1.11.1.min.js">
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="container">
+      <!--<div class="row">-->
+      <!--<div class="col-md-5  toppad  pull-right col-md-offset-3 ">-->
+           <!--<A href="edit.html" >Edit Profile</A>-->
+
+        <!--<A href="edit.html" >Logout</A>-->
+       <br>
+<p class=" text-info">May 05,2014,03:00 pm </p>
+      </div>
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" >
+
+
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">Parent's Profile</h3>
+            </div>
+            <div class="panel-body">
+              <div class="row">
+                <div class="col-md-3 col-lg-3 " align="center"> <img alt="User Pic" src="http://babyinfoforyou.com/wp-content/uploads/2014/10/avatar-300x300.png" class="img-circle img-responsive"> </div>
+
+
+                <div class=" col-md-9 col-lg-9 ">
+                  <table class="table table-user-information">
+                    <tbody>
+                    <form method ='post' action = "/parent">
+                      <tr>
+                          {% for parent in myParent %}
+                        <td>First Name:</td>
+                        <td>{{ parent.fname_p}}</td>
+                      </tr>
+                      <tr>
+                        <td>Last Name:</td>
+                        <td>{{ parent.lname_p}}</td>
+                      </tr>
+                      <tr>
+                        <td>Date of Birth</td>
+                        <td>{{ parent.bday_p}}</td>
+                      </tr>
+                        <tr>
+                        <td>Home Address</td>
+                        <td>{{ parent.add_p}}</td>
+                      </tr>
+                        {% endfor %}
+                      <!--<tr>-->
+                        <!--<td>Email</td>-->
+                        <!--<td><a href="mailto:info@support.com">info@support.com</a></td>-->
+                      <!--</tr>-->
+                        <!--<td>Phone Number</td>-->
+                        <!--<td>123-4567-890(Landline)<br><br>555-4567-890(Mobile)-->
+                        <!--</td>-->
+
+                      </tr>
+                    </form>
+                    </tbody>
+                  </table>
+
+                  <a href="#" class="btn btn-primary">My Sales Performance</a>
+                  <a href="#" class="btn btn-primary">Team Sales Performance</a>
+                </div>
+              </div>
+            </div>
+                 <div class="panel-footer">
+                        <a data-original-title="Broadcast Message" data-toggle="tooltip" type="button" class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-envelope"></i></a>
+                        <span class="pull-right">
+                            <a href="edit.html" data-original-title="Edit this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-edit"></i></a>
+                            <a data-original-title="Remove this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-danger"><i class="glyphicon glyphicon-remove"></i></a>
+                        </span>
+                    </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
