--- a/proj18/templates/p_prof.html
+++ b/proj18/templates/p_prof.html
@@ -2,19 +2,20 @@
 <!--<html lang="en">-->
 <!--<head>-->
     <!--<meta charset="UTF-8">-->
-    <!--<title>Parent's Profile</title>-->
+    <!--<title>Child's Profile</title>-->
 <!--</head>-->
 <!--<body>-->
-<!--<form method="get" action = "/edit_parent">-->
-<!--{% for parent in myParent %}-->
-    <!--<table>Name: {{ parent.fname_p}} {{ parent.lname_p}}</table>-->
-    <!--<table>Birthdate: {{ parent.bday_p}}</table>-->
-    <!--<table>E-mail: {{ parent.add_p}}</table>-->
+<!--<form method="get" action = "/edit_child">-->
+<!--{% for child in myChild %}-->
+    <!--<table>Name: {{ child.fname_c}} {{ child.lname_c}}</table>-->
+    <!--<table>Birthdate: {{ child.bday_c}}</table>-->
+    <!--<table>Diagnosis: {{ child.diagnosis}}</table>-->
 <!--{% endfor %}-->
-<!--<button class="" type="submit" onclick="window.location.href='/edit_parent'" >Edit</button>-->
+<!--<button class="" type="submit" onclick="window.location.href='/edit_child'" >Edit</button>-->
 <!--</form>-->
 <!--</body>-->
 <!--</html>-->
+
 <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js">
 <link href="https://code.jquery.com/jquery-1.11.1.min.js">
@@ -44,34 +45,12 @@
                 <div class=" col-md-9 col-lg-9 ">
                   <table class="table table-user-information">
                     <tbody>
-                    <form method ='post' action = "/parent">
-                      <tr>
-                          {% for parent in myParent %}
-                        <td>First Name:</td>
-                        <td>{{ parent.fname_p}}</td>
-                      </tr>
-                      <tr>
-                        <td>Last Name:</td>
-                        <td>{{ parent.lname_p}}</td>
-                      </tr>
-                      <tr>
-                        <td>Date of Birth</td>
-                        <td>{{ parent.bday_p}}</td>
-                      </tr>
-                        <tr>
-                        <td>Home Address</td>
-                        <td>{{ parent.add_p}}</td>
-                      </tr>
+                    <form method="get" action = "/edit_parent">
+                        {% for parent in myParent %}
+                        <table>Name: {{ parent.fname_p}} {{ parent.lname_p}}</table>
+                        <table>Birthdate: {{ parent.bday_p}}</table>
+                       <table>Address: {{ parent.add_p}}</table>
                         {% endfor %}
-                      <!--<tr>-->
-                        <!--<td>Email</td>-->
-                        <!--<td><a href="mailto:info@support.com">info@support.com</a></td>-->
-                      <!--</tr>-->
-                        <!--<td>Phone Number</td>-->
-                        <!--<td>123-4567-890(Landline)<br><br>555-4567-890(Mobile)-->
-                        <!--</td>-->
-
-                      </tr>
                     </form>
                     </tbody>
                   </table>
@@ -84,8 +63,8 @@
                  <div class="panel-footer">
                         <a data-original-title="Broadcast Message" data-toggle="tooltip" type="button" class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-envelope"></i></a>
                         <span class="pull-right">
-                            <a href="edit.html" data-original-title="Edit this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-edit"></i></a>
-                            <a data-original-title="Remove this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-danger"><i class="glyphicon glyphicon-remove"></i></a>
+                            <button class="btn btn-sm btn-warning" type="submit" onclick="window.location.href='/edit_parent'"><i class="glyphicon glyphicon-edit"></i></button>
+                            <button class="btn btn-sm btn-warning" type="submit" onclick="window.location.href='/del_parent'"><i class="glyphicon glyphicon-remove"></i></button>
                         </span>
                     </div>
 
