--- a/proj18/templates/edit_p.html
+++ b/proj18/templates/edit_p.html
@@ -1,21 +1,76 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Edit Profile</title>
-</head>
-<body>
-<form method="post" action = '/edit_parent'>
-    <label>First Name:</label>
-    <input id="fname_p" name="fname_p" type="text"/>
-    <label>Last Name:</label>
-    <input id="lname_p" name="lname_p" type="text"/>
-    <label>Birthdate:</label>
-    <input id="bday_p" name="bday_p" type="date"/>
-    <label>Address:</label>
-    <input id="add_p" name="add_p" type="text"/>
-    <input type="submit" onclick="window.location.href='/parent'"/>
-</form>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+    <!--<meta charset="UTF-8">-->
+    <!--<title>Edit Profile</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<form method="post" action = '/edit_parent/<acc_id>'>-->
+    <!--<label>First Name:</label>-->
+    <!--<input id="fname_p" name="fname_p" type="text"/>-->
+    <!--<label>Last Name:</label>-->
+    <!--<input id="lname_p" name="lname_p" type="text"/>-->
+    <!--<label>Birthdate:</label>-->
+    <!--<input id="bday_p" name="bday_p" type="date"/>-->
+    <!--<label>Address:</label>-->
+    <!--<input id="add_p" name="add_p" type="text"/>-->
+    <!--<input type="submit" onclick="window.location.href='/parent/<acc_id>'"/>-->
+<!--</form>-->
 
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
+<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js">
+<link href="https://code.jquery.com/jquery-1.11.1.min.js">
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="container">
+      <!--<div class="row">-->
+      <!--<div class="col-md-5  toppad  pull-right col-md-offset-3 ">-->
+           <!--<A href="edit.html" >Edit Profile</A>-->
+
+        <!--<A href="edit.html" >Logout</A>-->
+       <br>
+      </div>
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" >
+
+
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">Edit Parent's Profile</h3>
+            </div>
+            <div class="panel-body">
+              <div class="row">
+                <div class="col-md-3 col-lg-3 " align="center"> <img alt="User Pic" src="http://babyinfoforyou.com/wp-content/uploads/2014/10/avatar-300x300.png" class="img-circle img-responsive"> </div>
+
+
+                <div class=" col-md-9 col-lg-9 ">
+                  <table class="table table-user-information">
+                    <tbody>
+                    <form method="post" action = "/edit_parent/<'acc_id'>">
+                        <table>First Name:<input id="fname_p" name="fname_p" type="text"/></table>
+                        <table>Last Name:<input id="lname_p" name="lname_p" type="text"/></table>
+                        <table>Birthdate: <input id="bday_p" name="bday_p" type="text"/></table>
+                        <table>Address: <input id="add_p" name="add_p" type="text"/></table>
+
+                    </form>
+                    </tbody>
+                  </table>
+
+                  <a href="#" class="btn btn-primary">My Sales Performance</a>
+                  <a href="#" class="btn btn-primary">Team Sales Performance</a>
+                </div>
+              </div>
+            </div>
+                 <div class="panel-footer">
+                        <a data-original-title="Broadcast Message" data-toggle="tooltip" type="button" class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-envelope"></i></a>
+                        <span class="pull-right">
+                            <button class="btn btn-sm btn-warning" type="submit" onclick="window.location.href='/edit_parent/<acc_id>'"><i class="glyphicon glyphicon-edit"></i></button>
+                            <button class="btn btn-sm btn-warning" type="submit" onclick="window.location.href='/del_parent'"><i class="glyphicon glyphicon-remove"></i></button>
+                        </span>
+                    </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
