added upload avatar feature

--- a/proj18/templates/mode.html
+++ b/proj18/templates/mode.html
@@ -56,7 +56,7 @@ body {
 }
 </style><body>
 <div class="group">
-    <div style="background-image:url('images/parent.jpg')" onclick="window.location.href='/parent'"></div>
+    <div style="background-image:url('static/images/parent.jpg')" onclick="window.location.href='/parent'"></div>
 
 </div>
 
