--- a/proj18/templates/edit_p.html
+++ b/proj18/templates/edit_p.html
@@ -41,10 +41,19 @@
             </div>
             <div class="panel-body">
               <div class="row">
-                <div class="col-md-3 col-lg-3 " align="center"> <img alt="User Pic" src="http://babyinfoforyou.com/wp-content/uploads/2014/10/avatar-300x300.png" class="img-circle img-responsive"> </div>
+                <div class="col-md-3 col-lg-3 " align="center">
+                    <form id="upload-form" action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
 
+                        <strong>Upload Photo!</strong><br>
+                         <input id="file-picker" type="file" name="file" accept="image/*" multiple>
+                        <div id="msg"></div>
+                        <input type="submit" value="Upload!" id="upload-button">
+                    </form>
+                </div>
 
-                <div class=" col-md-9 col-lg-9 ">
+                  <br>
+                  <br>
+                  <div class=" col-md-9 col-lg-9 ">
                   <table class="table table-user-information">
                     <tbody>
                     <form method="post" action = "/edit_parent/<'acc_id'>">
@@ -57,15 +66,15 @@
                     </tbody>
                   </table>
 
-                  <a href="#" class="btn btn-primary">My Sales Performance</a>
-                  <a href="#" class="btn btn-primary">Team Sales Performance</a>
+                  <!--<a href="#" class="btn btn-primary">My Sales Performance</a>-->
+                  <!--<a href="#" class="btn btn-primary">Team Sales Performance</a>-->
                 </div>
               </div>
             </div>
                  <div class="panel-footer">
                         <a data-original-title="Broadcast Message" data-toggle="tooltip" type="button" class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-envelope"></i></a>
                         <span class="pull-right">
-                            <button class="btn btn-sm btn-warning" type="submit" onclick="window.location.href='/edit_parent/<acc_id>'"><i class="glyphicon glyphicon-edit"></i></button>
+                            <button class="btn btn-sm btn-warning" type="submit" onclick="window.location.href='/edit_parent/<acc_id>'">Save</i></button>
                             <button class="btn btn-sm btn-warning" type="submit" onclick="window.location.href='/del_parent'"><i class="glyphicon glyphicon-remove"></i></button>
                         </span>
                     </div>
@@ -74,3 +83,31 @@
         </div>
       </div>
     </div>
+
+<script>
+
+    $("#file-picker").change(function(){
+
+        var input = document.getElementById('file-picker');
+
+        for (var i=0; i<input.files.length; i++)
+        {
+        //koala.jpg, koala.JPG substring(index) lastIndexOf('a') koala.1.jpg
+            var ext= input.files[i].name.substring(input.files[i].name.lastIndexOf('.')+1).toLowerCase()
+
+            if ((ext == 'jpg') || (ext == 'png'))
+            {
+                $("#msg").text("Files are supported")
+            }
+            else
+            {
+                $("#msg").text("Files are NOT supported")
+                document.getElementById("file-picker").value ="";
+            }
+
+        }
+
+
+    } );
+
+</script>
