added mode redirections

--- a/proj18/templates/mode.html
+++ b/proj18/templates/mode.html
@@ -56,12 +56,12 @@ body {
 }
 </style><body>
 <div class="group">
-    <div style="background-image:url('static/images/parent.jpg')" onclick="window.location.href='/parent'"></div>
+    <div style="background-image:url('static/images/parent.jpg')" onclick="window.location.href='/parent_mode/1'"></div>
 
 </div>
 
 <div class="group">
-    <div style="background-image:url('images/parent.jpg')" onclick="window.location.href='/child'"></div>
+    <div style="background-image:url('images/parent.jpg')" onclick="window.location.href='/navigation'"></div>
 </div>
 
     <!--<div class="group">-->
