--- a/proj18/templates/places.html
+++ b/proj18/templates/places.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>PLACES</title>
-<link rel="shortcut icon" href="places/placesicon.png"/>
+<link rel="shortcut icon" href="static/places/placesicon.png"/>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -16,9 +16,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-animate-right w3-top w3-text-light-grey w3-large" style="z-index:3;width:250px;font-weight:bold;display:none;right:0;" id="mySidebar">
-  <a href="navigation.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">Categories</a>
-  <a href="childinfo.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">The Child</a>
-  <a href="parent.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">The Parent</a>
+  <a href="/navigation" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">Categories</a>
+  <a href="/child/1" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">The Child</a>
+  <a href="/parent/1" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">The Parent</a>
   <a href="places_rec.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">Child Activity: PLACES</a>
   <a href="welcome.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">Logout</a>
 </nav>
@@ -26,7 +26,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-white w3-xlarge w3-padding-16">
   <span class="w3-left w3-padding">
-  <img src="places/placesicon.png" alt="logo" width="30px" height="auto"/>PLACES</span>
+  <img src="static/places/placesicon.png" alt="logo" width="30px" height="auto"/>PLACES</span>
     <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="w3_open()">☰</a>
 </header>
 
@@ -47,18 +47,18 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- FOOD -->
   <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="food">
     <div class="w3-quarter">
-        <img src="places/jollibee.jpg" style="width:100%" onclick="document.getElementById('jollibee_play').play(); jollibee_clicks(); return false;" alt="Jollibee">
-        <img src="places/mcdo.jpg" style="width:100%" onclick="document.getElementById('mcdo_play').play(); mcdo_clicks(); return false;" alt="Playground">
+        <img src="static/places/jollibee.jpg" style="width:100%" onclick="document.getElementById('jollibee_play').play(); jollibee_clicks(); return false;" alt="Jollibee">
+        <img src="static/places/mcdo.jpg" style="width:100%" onclick="document.getElementById('mcdo_play').play(); mcdo_clicks(); return false;" alt="Playground">
         </div>
 
    <div class="w3-quarter">
-      <img src="places/church.jpg" style="width:100%" onclick="document.getElementById('church_play').play(); church_clicks(); return false;" alt="Church">
-      <img src="places/school.jpg" style="width:100%" onclick="document.getElementById('school_play').play(); school_clicks(); return false;" alt="School">
+      <img src="static/places/church.jpg" style="width:100%" onclick="document.getElementById('church_play').play(); church_clicks(); return false;" alt="Church">
+      <img src="static/places/school.jpg" style="width:100%" onclick="document.getElementById('school_play').play(); school_clicks(); return false;" alt="School">
    </div>
 
     <div class="w3-quarter">
-      <img src="places/pool.jpg" style="width:100%" onclick="document.getElementById('pool_play').play(); pool_clicks(); return false;" alt="Pool">
-      <img src="places/playground.jpg" style="width:100%" onclick="document.getElementById('playground_play').play(); play_clicks(); return false;" alt="Playground">
+      <img src="static/places/pool.jpg" style="width:100%" onclick="document.getElementById('pool_play').play(); pool_clicks(); return false;" alt="Pool">
+      <img src="static/places/playground.jpg" style="width:100%" onclick="document.getElementById('playground_play').play(); play_clicks(); return false;" alt="Playground">
 
     </div>
 
